# sxaIAM

./: .coverage  .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  ci.yml  cli.py  debug_accesskey.py  debug_integration.py  index.html  mkdocs.yml  pyproject.toml  report_v2.json  sitemap.xml
.github/workflows/: ci.yml
architecture/: index.html
contributing/: index.html
docs/: architecture.md  contributing.md  index.md  installation.md  quickstart.md  techniques.md
installation/: index.html
quickstart/: index.html
search/: search_index.json
sxaiam/: __main__.py  cli.py
sxaiam/findings/: __init__.py  comparator.py  escalation_path.py  registry.py  technique_base.py  techniques.py
sxaiam/graph/: __init__.py  builder.py  nodes.py  pathfinder.py
sxaiam/ingestion/: __init__.py  client.py  models.py  scps.py
sxaiam/output/: __init__.py  graphml_exporter.py  json_exporter.py  markdown_exporter.py
sxaiam/resolver/: __init__.py  engine.py  models.py
techniques/: index.html
terraform/: README.md
terraform/environments/sandbox/: main.tf  outputs.tf  variables.tf
terraform/modules/vulnerable_identities/: outputs.tf  path10_put_user_policy.tf  path11_put_role_policy.tf  path12_put_group_policy.tf  path13_attach_group_policy.tf  path14_update_assume_role_policy.tf  path1_create_policy_version.tf  path2_passrole_lambda.tf  path3_assumerole_chain.tf  path4_attach_policy.tf  path5_credential_takeover.tf  path6_create_login_profile.tf  path7_update_login_profile.tf  path8_set_default_policy_version.tf  path9_add_user_to_group.tf  variables.tf
tests/integration/: test_full_analysis.py
tests/unit/findings/: test_comparator.py  (+1 more)
(+7 files in other folders)
