[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sxaiam"
version = "0.1.0"
description = "AWS IAM attack path analysis — find privilege escalation chains before attackers do"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "sxaAspri", email = "your@email.com" }
]
keywords = ["aws", "iam", "security", "privilege-escalation", "pentest", "attack-path"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34",
  "networkx>=3.2",
  "typer>=0.12",
  "pydantic>=2.0",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "moto[iam,sts,organizations]>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
sxaiam = "sxaiam.cli:app"

[project.urls]
Homepage = "https://github.com/sxaAspri/sxaIAM"
Repository = "https://github.com/sxaAspri/sxaIAM"
Issues = "https://github.com/sxaAspri/sxaIAM/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=sxaiam --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
strict = true
